[gd_scene load_steps=6 format=3 uid="uid://bcx8xsexaeam4"]

[ext_resource type="Texture2D" uid="uid://cmr7ypp77igw1" path="res://assets/misc/title.png" id="1"]
[ext_resource type="Script" path="res://loader/main_menu/main_menu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dyxcothjlr0so" path="res://loader/main_menu/controls.tscn" id="3_qxtpi"]
[ext_resource type="PackedScene" uid="uid://bl3qn6xvcdtfw" path="res://loader/sound/bgm_player.tscn" id="4_ahlcs"]
[ext_resource type="AudioStream" uid="uid://dxsmnhdt2f1qb" path="res://assets/sound/bgm/choice.ogg" id="5_huaei"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="Title" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -171.0
offset_right = 171.0
offset_bottom = 129.0
grow_horizontal = 2

[node name="Cirruseng" type="TextureRect" parent="Title"]
layout_mode = 2
texture = ExtResource("1")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -50.5
offset_right = 46.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="LoadGame" type="Button" parent="Options"]
layout_mode = 2
text = "Load game"

[node name="NewGame" type="Button" parent="Options"]
layout_mode = 2
text = "New Game"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
text = "Quit"

[node name="Info" parent="." instance=ExtResource("3_qxtpi")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="BGMPlayer" parent="." instance=ExtResource("4_ahlcs")]
stream = ExtResource("5_huaei")

[connection signal="pressed" from="Options/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Options/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
